app/project-air-service.yml
apiVersion: v1
kind: Service
metadata:
  name: project-airlines-service
spec:
  selector: 
    app: project-air-dep 
  ports:
  - protocol: TCP
    port: 8001
    targetPort: 5000
