app/project-air-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-airlines-ingress
spec:
  defaultBackend:
    service:
      name: project-airlines-service
      port:
        number: 8001
